--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -74,7 +74,9 @@
         android:id="@+id/vp_head_main"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="8"></android.support.v4.view.ViewPager>
+        android:layout_weight="8">
+
+        </android.support.v4.view.ViewPager>
 
     <LinearLayout
         android:layout_width="match_parent"
