--- a/app/src/main/res/layout/fragment_organize.xml
+++ b/app/src/main/res/layout/fragment_organize.xml
@@ -24,19 +24,15 @@
             <com.uiview.MyViewPager
                 android:id="@+id/vp_fragment_new"
                 android:layout_width="match_parent"
-                android:layout_height="0dp"
-                android:layout_weight="2"/>
+                android:layout_height="200dp"
+                />
 
             <ListView
+                android:id="@+id/lv_fragment_hot"
                 android:layout_width="match_parent"
-                android:layout_height="0dp"
-                android:layout_weight="6"
+                android:layout_height="200dp"
                 ></ListView>
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="1234"
-                />
+
         </LinearLayout>
     </com.uiview.MyPullToRefreshScrollView>
 </LinearLayout>
